# konflikt

./: .clang-format  .eslintrc  .gitignore  .gitmodules  .npmrc  .prettierignore  2025-10-02-this-session-is-being-continued-from-a-previous-co.txt  2025-10-05-this-session-is-being-continued-from-a-previous-co.txt  ARCHITECTURE.md  BUILDING.md  CMakeLists.txt  LICENSE  NATIVE_MODULE.md  REMAINING_TASKS.md  package-lock.json  package.json  prettier.config.js  test-clipboard-binary.js  test-clipboard.js  test-config.js  test-config.json  tsconfig.json
native/: CMakeLists.txt
native/src/: konflikt_native.cpp  platform_macos.cpp  platform_x11.cpp
packaging/: konflikt.service
packaging/appimage/: build-appimage.sh  konflikt.desktop
packaging/debian/: changelog  control  install  rules
packaging/macos/: Konflikt.entitlements  build-dmg.sh
scripts/: build.js  generate-cert.sh
src/: BaseMessage.ts  CommandLineArgs.ts  CommandLineArguments.ts  Config.ts  ConfigSchema.ts  ConfigType.ts  Console.ts  ConsoleCommandMessage.ts  ConsoleErrorMessage.ts  ConsoleLogMessage.ts  ConsoleLogMessageSchema.ts  ConsoleMessage.ts  ConsoleMessageSchema.ts  ConsolePongMessage.ts  ConsolePongMessageSchema.ts  ConsoleResponseMessage.ts  ConsoleResponseMessageSchema.ts  ConvictInstance.ts  Desktop.ts  Disconnect.ts  DiscoveredService.ts  ErroMessageSchema.ts  ErrorMessage.ts  HandshakeRequest.ts  HandshakeRequestSchema.ts  HandshakeResponse.ts  HandshakeResponseSchema.ts  HeartbeatSchema.ts  InputEventData.ts  InputEventMessage.ts  InstanceInfoMessage.ts  InstanceRole.ts  KeyPressEventSchema.ts  KeyReleaseEvent.ts  KeyReleaseEventSchema.ts  KeyboardModifier.ts  KeyboardModifierSchema.ts  Konflikt.ts  KonfliktKeyEvent.ts  KonfliktKeyboardModifier.ts  (+51 more)
src/app/: ActivateClientMessage.ts  ActivateClientMessageSchema.ts  BaseMessageSchema.ts  CMakeLists.txt  ClientRegistrationMessage.ts  ClientRegistrationMessageSchema.ts  ClientScreenInfo.ts  CommandLineArgs.ts  Config.ts  ConnectedInstanceInfo.ts  Console.ts  ConsoleCommandMessage.ts  ConsoleCommandMessageSchema.ts  ConsoleErrorMessageSchema.ts  ConsoleLogMessageSchema.ts  ConsoleMessage.ts  ConsoleMessageSchema.ts  ConsolePongMessageSchema.ts  ConsoleResponseMessage.ts  ConsoleResponseMessageSchema.ts  DesktopSchema.ts  DisconnectSchema.ts  DiscoveredService.ts  ErrorMessage.ts  HandshakeRequestSchema.ts  HandshakeResponse.ts  HandshakeResponseSchema.ts  Heartbeat.ts  InputEventData.ts  InputEventMessageSchema.ts  InputEventType.ts  InstanceInfoMessageSchema.ts  KeyPressEvent.ts  KeyboardModifier.ts  Konflikt.ts  LayoutAssignmentMessage.ts  LayoutAssignmentMessageSchema.ts  LayoutManager.ts  LayoutUpdateMessage.ts  LayoutUpdateMessageSchema.ts  (+45 more)
src/desktop/macos/: README.md  build.sh  create-dmg.sh  generate-icon.sh
src/desktop/macos/Konflikt/: AccessibilityHelper.swift  AppDelegate.swift  Info.plist  Konflikt.entitlements  LaunchAtLoginHelper.swift  NotificationManager.swift  Preferences.swift  PreferencesWindow.swift  ProcessManager.swift  StatusBarController.swift  main.swift
src/libkonflikt/: CMakeLists.txt
src/libkonflikt/include/konflikt/: ConfigManager.h  HttpServer.h  Konflikt.h  KonfliktAll.h  LayoutManager.h  Platform.h  Protocol.h  Rect.h  ServiceDiscovery.h  Version.h  WebSocketClient.h  WebSocketServer.h  konflikt.h
src/libkonflikt/src/: ConfigManager.cpp  HttpServer.cpp  Konflikt.cpp  LayoutManager.cpp  PlatformLinux.cpp  PlatformMac.mm  Protocol.cpp  Rect.cpp  ServiceDiscoveryLinux.cpp  ServiceDiscoveryMac.mm  WebSocketClient.cpp  WebSocketServer.cpp
src/macos/: CMakeLists.txt  Info.plist.in
src/macos/Konflikt/: AppDelegate.swift  Konflikt-Bridging-Header.h  PreferencesWindowController.swift  StatusBarController.swift  main.swift
src/macos/KonfliktBridge/: KonfliktBridge.h  KonfliktBridge.mm
src/messages/: BaseMessage.ts  Desktop.ts  Disconnect.ts  ErrorMessage.ts  HandshakeRequest.ts  HandshakeResponse.ts  Heartbeat.ts  KeyPressEvent.ts  KeyReleaseEvent.ts  KeyboardModifier.ts  MouseButton.ts  MouseMoveEvent.ts  MousePressEvent.ts  MouseReleaseEvent.ts  State.ts  index.ts
src/native/: .clang-format  CMakeLists.txt  KonfliktNative.cpp  KonfliktNative.d.ts  KonfliktNative.h  KonfliktNativeLinux.cpp  KonfliktNativeMac.cpp  KonfliktNativeMac.mm  KonfliktNativeWayland.cpp  KonfliktNativeX11.cpp  createNativeLogger.ts  native.ts
src/native/include/: konflikt_native.h  konflikt_native.hpp
src/native/src/: konflikt_native.cpp  platform_macos.cpp  platform_x11.cpp
src/types/: ConsoleLogMessage.ts  HostAndPort.ts  KonfliktDesktop.ts  KonfliktDesktopEvent.ts  KonfliktEvent.ts  KonfliktKeyPressEvent.ts  KonfliktKeyReleaseEvent.ts  KonfliktMouseButtonEvent.ts  KonfliktMouseButtonReleaseEvent.ts  KonfliktState.ts  NativeLogger.ts  ScreenPositioning.ts
src/webpage/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/webpage/src/: App.tsx  main.tsx
src/webpage/src/api/: client.ts
src/webpage/src/components/: LayoutEditor.tsx  LayoutView.tsx  ScreenRect.tsx  SettingsForm.tsx  StatusBar.tsx
src/webpage/src/types/: Adjacency.ts  ConfigResponse.ts  LayoutResponse.ts  ScreenInfo.ts  ScreenPositionUpdate.ts  ScreenRectProps.ts  StatusBarProps.ts  StatusResponse.ts  UpdateConfigResponse.ts  UpdateLayoutResponse.ts  UpdateScreenResponse.ts  index.ts
